# OpenVoca

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  RELEASE.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: ask-follow-up-question.instructions.md  openvoca-ai-coding-guidelines.instructions.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/src/: main.py
backend/src/integrations/: ollama.py  openai_compat.py  provider.py
backend/src/services/: dictionary.py  prompt_builder.py  settings_store.py  stopwords.py  tokenizer.py  word_store.py
backend/tests/: conftest.py  test_algorithm.py  test_dictionary.py  test_main.py  test_openai_compat.py  test_prompt_builder.py  test_settings.py  test_static.py  test_tokenizer.py  test_word_store.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.css  main.ts
frontend/src/api/: reading.ts  settings.ts
frontend/src/components/: ComposerCard.vue  DefinitionToast.vue  HoldButton.vue  PreferencesModal.vue  ProgressSummaryModal.vue  ReadingSettingsBar.vue  SentenceDisplay.vue
frontend/src/composables/: readingPreferences.ts  useI18n.ts  useLemmaOverrides.ts  useSettings.ts
frontend/src/router/: index.ts
frontend/src/views/: HomeView.vue  SettingsView.vue  StatsView.vue
frontend/tests/: App.spec.ts  DefinitionToast.spec.ts  HomeView.spec.ts  ProgressSummaryModal.spec.ts  StatsView.spec.ts  reading.spec.ts  useLemmaOverrides.spec.ts  useSettings.spec.ts
launcher/: Cargo.toml  README.md  build.rs
launcher/src/: config.rs  health.rs  main.rs  port.rs  server.rs
scripts/: bundle.py  extract_dictionary.py
scripts/templates/: README.Unix.txt  README.Unix.zh-CN.txt  README.Windows.txt  README.Windows.zh-CN.txt
