[project]
name = "openvoca-backend"
version = "0.9.2"
description = "Backend for OpenVoca — LLM-powered vocabulary learning through contextual reading"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
dependencies = [
    "edge-tts>=6.1.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "spacy>=3.8.13",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.42.0",
]

[project.urls]
Homepage = "https://github.com/Maribbit/OpenVoca"
Repository = "https://github.com/Maribbit/OpenVoca"

[dependency-groups]
dev = [
    "anyio>=4.12.0",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
pythonpath = "."
