[package]
name = "openvoca-launcher"
edition = "2021"
version = "0.0.0" # injected from ../VERSION at build time
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
ureq = "2"
log = "0.4"
simplelog = "0.12"
ctrlc = "3"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
strip = true
lto = true
opt-level = "s"
